partners page grid UI

--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -1,4 +1,5 @@
 <%
+  partner_companies_count = 29;
   partner_companies = [
       {
           name:"LGBT Foundation",
@@ -6,7 +7,7 @@
           size: "large",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "lgbt-icon",
+          sprite_index: 0,
           has_exited: false,
           description_html: 'The LGBT Foundation will be launching the LGBT Token to empower, connect and support LGBT+ people all over the world. One of its first launch partners is Hornet Networks, a social platform for gay men with more than 24 million users worldwide.',
           founders: [
@@ -31,7 +32,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "fincom-icon",
+          sprite_index: 1,
           has_exited: false,
           description_html: 'GMEX, Block Commodities Ltd. and FinComEco are endeavouring to build a tokenised ecosystem of e-commerce partners featuring local vendors and service providers, as well as medical and educational institutions, where the FACES tokens can be redeemed.',
           founders: [
@@ -57,7 +58,7 @@
           size: "large",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "unsplash-icon",
+          sprite_index: 2,
           has_exited: false,
           description_html: 'Unsplash is the world’s leading photography platform. Unsplash served more than 5.4 Billion photo views in January, up more than 300% from 12 months ago. Unsplash and OST are partnering to reinvent, decentralize, and democratize photography.',
           founders: [
@@ -92,7 +93,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "fainin-icon",
+          sprite_index: 3,
           has_exited: false,
           description_html: 'When one of the founders was living in a dorm, he saw the need for a well-organised way to borrow stuff you rarely use. Like a drill or a tripod. Backed by a major insurer, Fainin will also feature “try before you buy” and “rent on location” products, like a pair of skis when staying at an AirBnB in the Alps.',
           founders: [
@@ -127,7 +128,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "brighty-icon",
+          sprite_index: 4,
           has_exited: false,
           description_html: 'The Brightly Co.wants to change the world through conscious shopping. They are catering to the millennial generation, who are overwhelmingly supportive (72%) of buying products that are made ethically and sustainably. With an annual spending power of over $200B, millennials can make a difference!',
           founders: [
@@ -154,7 +155,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "twilala-icon",
+          sprite_index: 5,
           has_exited: false,
           description_html: 'Twilala connects people in your area who share a mutual interest, from climbing mountains to wine tasting. You can use their app to exchange ideas, recommend locations or to organize meet-ups for like-minded people. Though currently focused on the Spanish market, Twilala hopes to cater to millions of people all over the world by 2020.',
           founders: [
@@ -185,7 +186,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "traipse-icon",
+          sprite_index: 6,
           has_exited: false,
           description_html: 'Traipse is on a mission to keep the quaint towns of Virginia on the map. The American startup wants to tokenize downtowns in an effort to encourage people to solve riddles, visit historic landmarks and to visit locally owned businesses and to minimize credit card transaction fees for the merchants.',
           founders: [
@@ -212,7 +213,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "touriocity-icon",
+          sprite_index: 7,
           has_exited: false,
           description_html: 'The people behind this London-based startup used to run their own tour company in Rome, when they noticed a growing in trend in people looking for tailor-made itineraries. Tour buses and the same old, tired walk around the Colosseum just didn’t cut it anymore: Touriocity is all about making citytrips a unique, personal experience.',
           founders: [
@@ -239,7 +240,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "wooshii-icon",
+          sprite_index: 8,
           has_exited: false,
           description_html: 'Wooshii is both a marketplace and a platform for video producers to collaborate on videos for external clients. It is the video production management solution powering the world’s video teams for corporate clients including Google, eBay, Virgin, Merck, eBay, and British Airways.',
           founders: [
@@ -266,7 +267,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "lytepay-icon",
+          sprite_index: 9,
           has_exited: false,
           description_html: 'LytePay is building a industry-standard decentralized finance platform for the gig economy. Partnering with OST, they hope to build a compassionate banking platform of the future, providing freelancers everywhere with access to affordable capital, fair insurance, and benefits from community membership.',
           founders: [
@@ -293,7 +294,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "korhal-icon",
+          sprite_index: 10,
           has_exited: true,
           description_html: 'Korhal.io is building a consumer app to enable instant WiFi access via blockchain. A tokenized single sign-on will enable worldwide access to fully encrypted wifi shared by professional and private hotspot operators.',
           founders: [
@@ -328,7 +329,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "treat-icon",
+          sprite_index: 11,
           has_exited: false,
           description_html: 'Treat is a mobile community for personalized health advice where members share experiences about treatments and receive relevant information from experts and verified resources about topics of interest.',
           founders: [
@@ -355,7 +356,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "connect-scale-icon",
+          sprite_index: 12,
           has_exited: false,
           description_html: 'ConnectScale is a sports fishing social community built around a connected device for weighing and tracking catch data from fishing trips.',
           founders: [
@@ -382,7 +383,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "license-rocks-icon",
+          sprite_index: 13,
           has_exited: false,
           description_html: 'License.Rocks is building a platform for decentralized software licensing through tokenization. Their vision is to build a framework for defining how digital products such as software can be licensed and create new business opportunities and sales channels for creators of digital products.',
           founders: [
@@ -412,7 +413,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "lookhave-icon",
+          sprite_index: 14,
           has_exited: false,
           description_html: 'Lookhave is the social fashion network app that connects your personal wardrobe to your smartphone. With over a 1,000.000 fashion items, and smart use of image recognition -- mix and match your clothes, share your looks, get inspired by friends and professionals, and buy all you see.',
           founders: [
@@ -438,7 +439,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "tomorrow-icon",
+          sprite_index: 15,
           has_exited: false,
           description_html: 'Tomorrow is launching a new type of blockchain powered bank, developing a mobile sustainable checking account for smartphones.',
           founders: [
@@ -468,7 +469,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "kokomo-icon",
+          sprite_index: 16,
           has_exited: false,
           description_html: 'Kokomo Stars is developing a platform to allows the world’s best talents to cash in on their potential, using blockchain technology to convert future earnings into personalized digital tokens as tradable profit rights. Fans and believers can back their favorite talents and share in the rewards of their successes.',
           founders: [
@@ -494,7 +495,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "tribecoin-icon",
+          sprite_index: 17,
           has_exited: false,
           description_html: 'TribeCoin is a marketing platform that incentivizes customers and influencers to create and distribute authentic content that helps brands tell their story to the world, and complete missions that help them achieve their goals.',
           founders: [
@@ -520,7 +521,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "radmule-icon",
+          sprite_index: 18,
           has_exited: false,
           description_html: 'RadMule Labs is a mobile game studio focusing on new and innovative ways of gaming. By building a game that has a token economy using OST Radmule wants to let players earn tokens they can spend on other apps in the OST network.',
           founders: [
@@ -546,7 +547,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "stealth-icon",
+          sprite_index: 19,
           has_exited: false,
           description_html: 'An Oxford University stealth healthcare spinoff and OST are partnering on tokenization of a pharmaceutical app for matching phase 3 clinical trials with patients from a decentralized data pool in a GDPR privacy adhering manner, to highly reduce time to market for drug development.',
           founders: [
@@ -572,7 +573,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "stealth-icon",
+          sprite_index: 19,
           has_exited: true,
           description_html: 'Prediction, Attention and Resource Allocation markets are not new to business. Tokenizing everyday at-work interactions with integrations into traditional business systems is the focus of this stealth project.',
           founders: [
@@ -598,7 +599,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "tesloop-icon",
+          sprite_index: 20,
           has_exited: false,
           description_html: "Tesloop is the world's first sustainable mobility company with a fleet of Tesla vehicles uniquely able to share real-time telemetry ideally suited to a range of cases to tokenize transportation. The partneship will focus on tokenizing consumer-vehicle interactions including car ownership, ride hailing, black car and car rental services.",
           founders: [
@@ -629,7 +630,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "floship-icon",
+          sprite_index: 21,
           has_exited: false,
           description_html: "Floship is the World’s #1 international crowdfunding fulfillment provider by packages shipped; they have delivered rewards globally for over 100 of the most funded Kickstarter and Indiegogo projects. In addition to micro-payments they are exploring blockchain benefits to smooth the supply chain through their integrations with webshops and couriers.",
           founders: [
@@ -656,7 +657,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "look-icon",
+          sprite_index: 22,
           has_exited: false,
           description_html: "Look (by Vidi-VR)  is a VR/AR social media platform and application integrating  tokenization as a core feature for members of the community to reward and incentivize eachother for actively participating in the 3D media creation and sharing experience through elements such as bounties, ratings, and micro-payments.",
           founders: [
@@ -683,7 +684,7 @@
           size: "large",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "gushcloud-icon",
+          sprite_index: 23,
           has_exited: false,
           description_html: "Gushcloud is Asia’s leading influencer marketing and entertainment network that connects audiences and brands with more than 12,000 global influencers and creators. We have been exploring tokenization across rewarding and incentivizing online influencer marketing, micro-payments, gaming, and analytics.",
           founders: [
@@ -710,7 +711,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "xain-icon",
+          sprite_index: 24,
           has_exited: false,
           description_html: "XAIN builds applications using AI to secure, stabilize and scale distributed ledger networks and in turn using the blockchain verified data to develop AI products. Xain will be using the OpenST protocol to explore tokenized applications on their networks for ride-sharing and medical patient records amongst others.",
           founders: [
@@ -745,7 +746,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "ib-icon",
+          sprite_index: 25,
           has_exited: false,
           description_html: "Interview Bit is a SaaS e-learning and job-discovery platform that prepared > 250,000 software engineers for companies including Amazon, Uber, Facebook and others. InterviewBit is exploring tokenizing their native coin, that users can spend on courses and coaches as they build a portfolio, to give it a tradable marketvalue.",
           founders: [
@@ -776,7 +777,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "digital-knights-icon",
+          sprite_index: 26,
           has_exited: false,
           description_html: "Digital Knights is building a network of verified development teams and innovation projects. The marketplace will be driven through the tech due diligence curation of participants and tokenized rewards and feedback mechanisms down to individual developer level. Blockchain supported features will make the marketplace transparent to all participants.",
           founders: [
@@ -807,7 +808,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "rlay-icon",
+          sprite_index: 27,
           has_exited: false,
           description_html: "Not available maybe (red)",
           founders: [
@@ -842,7 +843,7 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          company_logo: "pepo-icon",
+          sprite_index: 28,
           has_exited: false,
           description_html: "Not available",
           founders: [
@@ -927,13 +928,12 @@
 
     <div class="row mt-5">
       <% partner_companies.each_with_index do|partner, index| %>
-        <% if partner[:has_exited] == false%>
         <div class="col-6 col-md-3 p-0 category-all size-all visible <%= 'category-'+partner[:categories].join(" category-") %> size-<%= partner[:size] %>">
-          <div class="aspect-ratio-box" >
-            <span class="aspect-ratio-box-inside <%= partner[:company_logo] %>" data-toggle="modal" data-target="#infoModal-<%=index %>" data-partner_companies_index="<%=index %>"></span>
+          <div class="aspect-ratio-box" title="<%= 'category-'+partner[:categories].join(" category-") %> size-<%= partner[:size] %>">
+            <span class="aspect-ratio-box-inside partner-company" style="background-position-y: <%= ((100.00/(partner_companies_count-1))* partner[:sprite_index]).round(2)%>%;" data-toggle="modal" data-target="#infoModal-<%=index %>" data-partner_companies_index="<%=index %>"></span>
+            <span class="ribbon">EXITED</span>
           </div>
         </div>
-        <% end %>
 
 
         <% content_for :end_js do %>
