--- a/app/assets/stylesheets/web/ost/new-partners/Partners.scss
+++ b/app/assets/stylesheets/web/ost/new-partners/Partners.scss
@@ -146,11 +146,6 @@ body.modal-open main{
 //    }
 //  }
 
-
-
-
-
-
   .filter-style{
     color: #438bad;
     font-size: 0.8rem;
@@ -209,7 +204,6 @@ body.modal-open main{
   }
 
   .category-all{
-    position: relative;
     &:after{
       height: 14px;
       width: 14px;
@@ -258,6 +252,28 @@ body.modal-open main{
 //        }
 //      }
 //    }
+    .ribbon{
+      background: #e4b030;
+      color: #fff;
+      height: 22px;
+      line-height: 20px;
+      padding: 0px 6px 0 15px;
+      position: absolute;
+      font-size: 14px;
+      font-weight: 400;
+      letter-spacing: 1px;
+      top: 10px;
+      right: 10px;
+      &:before{
+        background: #fff;
+        border-bottom: 11px solid transparent;
+        border-right: 11px solid #e4b030;
+        border-top: 11px solid transparent;
+        content: '';
+        position: absolute;
+        left: 0;
+      }
+    }
   }
 
   .aspect-ratio-box {
@@ -265,9 +281,6 @@ body.modal-open main{
     padding-top: 47px / 72px * 100% ;
     &:hover{
       background-color: red;
-      .aspect-ratio-box-inside{
-//        background-image: url('https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/unsplash-white.png');
-      }
     }
   }
   .aspect-ratio-box-inside {
@@ -277,25 +290,6 @@ body.modal-open main{
     bottom: 0;
     margin: auto;
     position: absolute;
-//    background-size: 50%;
-//    background-repeat: no-repeat;
-//    background-position: center;
-
-    @-webkit-keyframes fadeInRightBigrule {
-      from {
-        left : 0px;
-      }
-
-      to {
-       left : 200px;
-      }
-    }
-
-
-
-    .fadeInRightBig {
-      -webkit-animation-name: fadeInRightBigrule;
-    }
   }
 
 }
