--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -932,8 +932,10 @@
           <div class="aspect-ratio-box" title="<%= 'category-'+partner[:categories].join(" category-") %> size-<%= partner[:size] %>">
             <span class="aspect-ratio-box-inside partner-company" style="background-position-y: <%= ((100.00/(partner_companies_count-1))* partner[:sprite_index]).round(2)%>%;" data-toggle="modal" data-target="#infoModal-<%=index %>" data-partner_companies_index="<%=index %>"></span>
             <% if partner[:has_exited] == true%>
-
-          <span class="ribbon">EXITED</span>
+              <div class="position-absolute" style="top: 10px;right: 10px;font-size: 0;">
+                <span class="ribbon">EXITED</span>
+                <span class="arrow"></span>
+              </div>
             <% end %>
 
 
