--- a/app/assets/stylesheets/web/ost/new-partners/Partners.scss
+++ b/app/assets/stylesheets/web/ost/new-partners/Partners.scss
@@ -299,7 +299,7 @@ body.modal-open main{
 
 }
 
-.ost-backward-triangle{
+.ost-forward-triangle{
   position: absolute;
   left: -40px;
   right: -40px;
@@ -554,6 +554,32 @@ body.modal-open main{
   .btn-secondary{
     background-color: inherit;
   }
+}
 
-
+.footer-nav-wrap{
+  .ost-backward-triangle{
+    position: absolute;
+    left: -40px;
+    right: -40px;
+    top: -60px;
+    height: 120px;
+    transform: rotate(-0.8deg);
+    background: #fff;
+    @media (max-width: 512px){
+      transform: rotate(-3.6deg);
+    }
+    @media (min-width: 513px) and (max-width: 768px){
+      transform: rotate(-2.8deg);
+    }
+    @media (min-width: 769px) and (max-width: 1024px){
+      transform: rotate(-1.8deg);
+    }
+    @media (min-width: 1025px){
+      transform: rotate(-2.6deg);
+    }
+  }
+  .ost-triangleSpace{
+    padding-top: 4em;
+    width: 100%;
+  }
 }
