--- a/app/views/web/ost/new-partners/_contact_us.erb
+++ b/app/views/web/ost/new-partners/_contact_us.erb
@@ -1,5 +1,5 @@
 <section class="container-fluid position-relative" style="overflow:hidden;" id="contactus">
-  <div class="ost-backward-triangle sky-blue"></div>
+  <div class="ost-forward-triangle sky-blue"></div>
   <div class="row container-contact-us py-5">
     <div class="container mx-auto">
       <div class="row">
