--- a/app/views/web/ost/new-partners/_use_cases.erb
+++ b/app/views/web/ost/new-partners/_use_cases.erb
@@ -5,102 +5,57 @@
   <%
     autoplay_version = "?rel=0&autoplay=1";
     use_cases =  [{
-                         :title => '"Ship It!": Kwanda',
-                         :description => "Kwanda is a Q&A platform with a built-in token economy. Users can set a specific reward value to a question allowing for receiving and rewarding more high quality answers.",
-                         :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kawanda-1.png",
-                         :youtube_link => "https://www.youtube.com/embed/j9E90BxUBoI" + autoplay_version,
-                         :project_link => "http://kwanda.me",
-                         :project_link_name => "KWANDA",
-                         :participants => [
-                             {
-                                 :title => "Marc Heiduk",
-                                 :type  => "Web Developer"
-                             },
-                             {
-                                 :title => "Anton Porsche",
-                                 :type  => "Web Developer"
-                             }
-                         ]
+                         :title => 'ConnectScale',
+                         :description => "ConnectScale is a sports fishing social community built around a connected device for weighing and tracking catch data from fishing trips.",
+                         :youtube_img => "https://img.youtube.com/vi/MjtcnnqmVBk/hqdefault.jpg",
+                         :youtube_link => "https://www.youtube.com/embed/MjtcnnqmVBk" + autoplay_version,
+                         :project_link => "https://connectscale.com/",
                      },
                      {
-                         :title => "Best Motion Picture: kidtoken",
-                         :description => "kidtoken is the first tokenized cryptocurrency for kids that also offers parents & teachers the ability to incentivize positive behaviors such as good grades, kindness and eating healthy. The platform is a scalable concept aimed at a massive audience, one that’s growing up familiar with digital economies.",
+                         :title => "Fainin",
+                         :description => "When one of the founders was living in a dorm, he saw the need for a well-organised way to borrow stuff you rarely use. Like a drill or a tripod. Backed by a major insurer, Fainin will also feature “try before you buy” and “rent on location” products, like a pair of skis when staying at an AirBnB in the Alps.",
                          :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
-                         :youtube_link => "https://www.youtube.com/embed/fDTxlPmCSyc" + autoplay_version,
-                         :project_link => "https://www.kidtoken.org",
-                         :project_link_name => "KIDTOKEN",
-                         :participants => [
-                             {
-                                 :title => "Scott Connors",
-                                 :type  => "CEO"
-                             },
-                             {
-                                 :title => "Casie Connors",
-                                 :type  => "CFO"
-                             },
-                             {
-                                 :title => "Chance Chapman",
-                                 :type  => "CTO"
-                             },
-                             {
-                                 :title => "Michael Murray",
-                                 :type  => "President of Marketing"
-                             },
-                             {
-                                 :title => "Cassidi Murray",
-                                 :type  => "Community Manager"
-                             },
-                             {
-                                 :title => "David Bobr",
-                                 :type  => "Business Development Manager"
-                             }
-                         ]
+                         :youtube_link => "https://www.youtube.com/embed/EMVczADfNOo" + autoplay_version,
+                         :project_link => "https://fainin.com/en/",
                      },
                      {
-                         :title => "Best UX: HARD Gaming",
-                         :description => "The goal of HARD is to replace the use of in-game fiat currency. The biggest advantage of a blockchain based economy is that the users are the real owners of their tokens and that it’s transparent how each user is interacting with the economy. Users can use HARD across multiple games and they can make sure that tokens will not disappear, so they are more motivated to convert real money to tokens.",
+                         :title => "License.Rocks",
+                         :description => "License.Rocks is building a platform for decentralized software licensing through tokenization. Their vision is to build a framework for defining how digital products such as software can be licensed and create new business opportunities and sales channels for creators of digital products.",
                          :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-hard-gaming.png",
-                         :youtube_link => "https://www.youtube.com/embed/wtO6d0DJF6s" + autoplay_version,
-                         :project_link_name => "HARD GAMING",
-                         :participants => [
-                             {
-                                 :title => "David Rios",
-                                 :type  => "Senior Game Developer"
-                             }
-                         ]
+                         :youtube_link => "https://www.youtube.com/embed/wJ6XkOIkbX0" + autoplay_version,
+                         :project_link => "https://license.rocks/"
+
                      },
                      {
-                         :title => "Most Innovative: Coner",
-                         :description => "The motivation behind Coner is the problem of limited efficiency of publications search in digital libraries. Coner is an interactive document viewer that visualises automatically extracted keywords in research papers and allows users to rate and add new keywords.",
+                         :title => "Radmule Labs",
+                         :description => "RadMule Labs is a mobile game studio focusing on new and innovative ways of gaming. By building a game that has a token economy using OST Radmule wants to let players earn tokens they can spend on other apps in the OST network.",
                          :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-coner.png",
-                         :youtube_link => "https://www.youtube.com/embed/G-bMkp8tm-A" + autoplay_version,
-                         :project_link => "https://coner-viewer.herokuapp.com/viewer",
-                         :project_link_name => "CONER",
-                         :participants => [
-                             {
-                                 :title => "Daniel Vliegenthart",
-                                 :type  => "Full-Stack Web Developer"
-                             }
-                         ]
+                         :youtube_link => "https://www.youtube.com/embed/thxQOtO2fIc" + autoplay_version,
+                         :project_link => "https://www.radmule.com/"
                      },
                      {
-                         :title => 'Best "Do Good": ReadIt',
-                         :description => "ReadIt's mission is to reduce illiteracy by providing a scalable reading program that enhances the tracking & reward program by leveraging WebUI & Blockchain integration.",
+                         :title => 'The Brightly Co.',
+                         :description => "The Brightly Co.wants to change the world through conscious shopping. They are catering to the millennial generation, who are overwhelmingly supportive (72%) of buying products that are made ethically and sustainably. With an annual spending power of over $200B, millennials can make a difference!",
                          :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-read-it.png",
-                         :youtube_link => "https://www.youtube.com/embed/iKD4jAyXq4A" + autoplay_version,
-                         :project_link => "https://jshin2000.wixsite.com/readitprogram",
-                         :project_link_name => "READIT",
-                         :participants => [
-                             {
-                                 :title => "John Shin",
-                                 :type  => "Sales Engineer"
-                             },
-                             {
-                                 :title => "Adam Wilhelmi",
-                                 :type  => "Software Engineer"
-                             }
-                         ]
-                     }
+                         :youtube_link => "https://www.youtube.com/embed/iXBIgdoMnQE" + autoplay_version,
+                         :project_link => "https://thebrightly.co/",
+
+                     },
+                      {
+                          :title => 'Touriocity',
+                          :description => "The people behind this London-based startup used to run their own tour company in Rome, when they noticed a growing in trend in people looking for tailor-made itineraries. Tour buses and the same old, tired walk around the Colosseum just didn’t cut it anymore: Touriocity is all about making citytrips a unique, personal experience.",
+                          :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-read-it.png",
+                          :youtube_link => "https://www.youtube.com/embed/Ulrsx3Q5PhA" + autoplay_version,
+                          :project_link => "https://touriocity.com/#!/",
+
+                      },
+                      {
+                          :title => "Twilala",
+                          :description => "Twilala connects people in your area who share a mutual interest, from climbing mountains to wine tasting. You can use their app to exchange ideas, recommend locations or to organize meet-ups for like-minded people. Though currently focused on the Spanish market, Twilala hopes to cater to millions of people all over the world by 2020.",
+                          :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-coner.png",
+                          :youtube_link => "https://www.youtube.com/embed/97XSaBteNv8" + autoplay_version,
+                          :project_link => "https://www.twilala.es/"
+                      },
     ]
   %>
   <div class="use-case-wrap container">
