--- a/app/views/web/ost/new-partners/_partnering_with_ost.erb
+++ b/app/views/web/ost/new-partners/_partnering_with_ost.erb
@@ -1,4 +1,4 @@
-<section class="container-fluid container-partnering-ost py-5">
+<section class="container-fluid container-partnering-ost pt-5 pb-4 sky-blue">
 
   <div class="row">
     <div class="container">
